--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-numpy>=1.26.0
-pandas>=2.1.0
-scipy>=1.11.0
-pyarrow>=13.0.0
-faker>=19.0.0
+boto3==1.42.16
+botocore==1.42.16
+Faker==39.0.0
+jmespath==1.0.1
+numpy==2.4.0
+pandas==2.3.3
+pyarrow==22.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+s3transfer==0.16.0
+scipy==1.16.3
+six==1.17.0
+tzdata==2025.3
+urllib3==2.6.2
